--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,4 +36,18 @@
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
+    <php>
+        <env name="APP_KEY" value="base64:DV8kQN5a+4MwAIQ5uk1WNafxO+/Efab0K20uVMDJ2UE="/>
+        <env name="APP_ENV" value="testing"/>
+        <env name="APP_URL" value="http://peek.test"/>
+        <env name="ADMIN_APP_URL" value="http://peek.test"/>
+        <env name="APP_DEBUG" value="true"/>
+        <env name="CACHE_DRIVER" value="array"/>
+        <env name="SESSION_DRIVER" value="array"/>
+        <env name="QUEUE_DRIVER" value="sync"/>
+        <env name="MAIL_DRIVER" value="array"/>
+        <env name="DB_CONNECTION" value="sqlite"/>
+        <env name="DB_DATABASE" value=":memory:"/>
+        <env name="LOG_CHANNEL" value="single"/>
+    </php>
 </phpunit>
