--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
+        "spatie/invade": "^1.1",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
