--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@awcodes/filament-plugin-purge": "^1.0.2",
         "autoprefixer": "^10.4.7",
         "esbuild": "^0.8.57",
+        "lodash.debounce": "^4.0.8",
+        "lodash.throttle": "^4.1.1",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.14",
         "prettier": "^2.7.1",
