--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,12 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.13.5",
         "illuminate/contracts": "^9.0|^10.0"
     },
     "require-dev": {
-        "calebporzio/sushi": "^2.4",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
@@ -38,8 +37,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "spatie/invade": "^1.1",
-        "spatie/laravel-ray": "^1.26"
+        "spatie/invade": "^1.1"
     },
     "autoload": {
         "psr-4": {
