--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
         "build": "npm-run-all build:*"
     },
     "devDependencies": {
-        "@awcodes/filament-plugin-purge": "^1.0.2",
-        "alpinejs": "^3.12.2",
-        "autoprefixer": "^10.4.7",
-        "esbuild": "^0.8.57",
-        "lodash.debounce": "^4.0.8",
-        "lodash.throttle": "^4.1.1",
-        "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.14",
-        "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^3.1.6"
+        "@awcodes/filament-plugin-purge": "^1.1",
+        "@tailwindcss/forms": "^0.5",
+        "@tailwindcss/typography": "^0.5",
+        "alpinejs": "^3.12",
+        "autoprefixer": "^10.4",
+        "esbuild": "^0.8",
+        "lodash.debounce": "^4.0",
+        "lodash.throttle": "^4.1",
+        "npm-run-all": "^4.1",
+        "postcss": "^8.4",
+        "prettier": "^2.7",
+        "prettier-plugin-tailwindcss": "^0.1",
+        "tailwindcss": "^3.3"
     }
 }
