--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,9 +2,9 @@ name: run-tests
 
 on:
   push:
-    branches: [main, 1.x, 0.x]
+    branches: [2.x, 1.x]
   pull_request:
-    branches: [main, 1.x, 0.x]
+    branches: [2.x, 1.x]
 
 jobs:
   test:
