--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^8.1",
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15",
-        "illuminate/contracts": "^9.0|^10.0"
+        "illuminate/contracts": "^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
