--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/invade": "^1.1"
+        "spatie/invade": "^1.1",
+        "symfony/polyfill-php82": "^1.28"
     },
     "autoload": {
         "psr-4": {
