--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
         "spatie/invade": "^1.1",
-        "spatie/laravel-ray": "^1.26"
+        "spatie/laravel-ray": "^1.26",
+        "symfony/polyfill-php82": "^1.28"
     },
     "autoload": {
         "psr-4": {
